--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,136 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS. Адаптивная вёрстка и автоматизация</a>».</p>
-
-  </body>
+<html class="page" lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <title>Седона</title>
+</head>
+<body class="page__body">
+  <header class="main-header">
+    <a class="main-header__logo" href="index.html">
+      <img class="main-header__logo-image" src="../source/img/logo.svg" width="185" height="96" alt="Логотип сайта Седона">
+    </a>
+    <nav class="main-navigation">
+      <button class="main-navigation__toggle" type="button">
+        <span class="visually-hidden">Открыть меню</span>
+      </button>
+      <div class="main-navigation__wrapper">
+        <ul class="main-navigation__list site-list">
+          <li class="site-list__item site-list__item--active">
+            <a href="index.html">
+              ГЛАВНАЯ
+            </a>
+          </li>
+          <li class="site-list__item">
+            <a href="catalog.html">
+              ФОТО И ВИДЕО
+            </a>
+          </li>
+          <li class="site-list__item">
+            <a href="form.html">
+              ФОРМА ОТЗЫВА
+            </a>
+          </li>
+          <li class="site-list__item">
+            <a href="#">
+              HTML ACADEMY
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <main class="index-container">
+    <h1 class="visually-hidden">Седона</h1>
+    <img class="main-header__text" src="../source/img/text-index.svg" width="282" height="214" alt="" style="background-image: url('../source/img/back-mobile.jpg.jpg');">
+    <section class="advantages">
+      <header class="advantages__header">
+        <h2 class="advantages__header-title">СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!</h2>
+        <p class="advantages__header-description">"Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!"</p>
+      </header>
+      <div class="advantages__wrapper">
+        <ul class="advantages__list">
+          <li class="advantages__item">
+            <h3 class="advantages__title">НАСТОЯЩИЙ ГОРОДОК</h3>
+            <p class="advantages__number">— №1 —</p>
+            <p class="advantages__description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
+            <img class="advantages__image-city" src="../source/img/photo-city@1x 1.jpg" width="520" height="260" alt="">
+          </li>
+          <li class="advantages__item advantages__item--town">
+            <img class="advantages__image" src="../source/img/icon-house.svg" width="39" height="36.83" alt="Домик">
+            <h3 class="advantages__title">Жилье</h3>
+            <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+          </li>
+          <li class="advantages__item advantages__item--town">
+            <img class="advantages__image" src="../source/img/icon-burger.svg" width="40" height="34.9" alt="Бургер">
+            <h3 class="advantages__title">Еда</h3>
+            <p class="advantages__description">Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, Вы НЕ разочаруетесь!</p>
+          </li>
+          <li class="advantages__item advantages__item--towngit">
+            <img class="advantages__image" src="../source/img/icon-gift.svg" width="32" height="38" alt="Подарок">
+            <h3 class="advantages__title">СУВЕНИРЫ</h3>
+            <p class="advantages__description">Не только китайского, но и местного производства!</p>
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title">ТАМ ЕСТЬ Мост дьявола</h3>
+            <p class="advantages__number">— №2 —</p>
+            <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+            <img class="advantages__image-bridge" src="../source/img/photo-bridge@1x 1.jpg" width="520" height="260" alt="">
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title">НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
+            <p class="advantages__number">— №3 —</p>
+            <p class="advantages__description">ВСЕ интересные места находятся очень близко</p>
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title">КРАСИВАЯ ДОРОГА</h3>
+            <p class="advantages__number">— №4 —</p>
+            <p class="advantages__description">ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА совсем НЕ СКУЧНО!</p>
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title">МАЛО ТУРИСТОВ</h3>
+            <p class="advantages__number">— №5 —</p>
+            <p class="advantages__description">Большинство едет в гранд каньон и толпится там</p>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="subscription">
+      <div class="subscription__wrapper">
+        <h2 class="subscription__title">ЗАИНТЕРЕСОВАЛИСЬ?</h2>
+        <p class="subscription__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+        <button class="subscription__button" type="button">Найти Гостиницу</button>
+        <img class="subscription__image-map" src="../source/img/map-mobile.jpg" width="320" height="350" alt="Карта местности, вид из космаса">
+      </div>
+    </section>
+  </main>
+  <footer class="main-footer">
+    <div class="main-footer__wrapper">
+      <h2 class="main-footer__title">#visitSEDONA</h2>
+      <div class="main-footer__social social">
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
+              <img class="social__link--vkontakte-image" src="../source/img/vk.svg" width="48" height="48" alt="">
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
+              <img class="social__link--youtube-image" src="../source/img/YouTube.svg" width="48" height="48" alt="">
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
+              <img class="social__link--telegram-image" src="../source/img/Telegram.svg" width="48" height="48" alt="">
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="main-footer__copyright copyright">
+        <h2 class="copyright__text">Разработано</h2>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+          <img class="copyright__image" src="../source/img/htmlacademy.svg" width="26.9" height="34.1" alt="">
+        </a>
+      </div>
+  </footer>
+</body>
 </html>
