--- a/source/catalog.html
+++ b/source/catalog.html
@@ -73,7 +73,7 @@
           96</button>
         </li>
         <li class="catalog__item-card">
-          <img class="catalog__item-card--image" src="../source/img/photo-4-desktop 1.jpg" width="280" height="280" alt="Горы красного увета и деревья между ущельями">
+          <img class="catalog__item-card--image" src="../source/img/photo-4-desktop1.jpg" width="280" height="280" alt="Горы красного увета и деревья между ущельями">
           <h3 class="title-card">Мост дьявола</h3>
           <p class="card-text">Автор фото: Антон</p>
           <button class="card__favorite" type="button">
@@ -85,10 +85,10 @@
     <section class="catalog__video">
       <h2 class="catalog__video-title">Все еще сомневаетесь?</h2>
       <p class="catalog__video-description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
-      <video class="catalog__video-player" width="280" height="177" controls poster="../source/img/video-desktop 1.jpg">
-        <source src="../source/img/video-desktop 1.webm" type="video/webm">
-        <source src="../source/img/video-desktop 1.ogv" type="video/ogg">
-        <source src="../source/img/video-desktop 1.mp4" type="video/mp4">
+      <video class="catalog__video-player" width="280" height="177" controls poster="../source/img/video-desktop1.jpg">
+        <source src="../source/img/video-desktop1.webm" type="video/webm">
+        <source src="../source/img/video-desktop1.ogv" type="video/ogg">
+        <source src="../source/img/video-desktop1.mp4" type="video/mp4">
       </video>
     </section>
   </main>
@@ -117,9 +117,10 @@
       <div class="main-footer__copyright copyright">
         <h2 class="copyright__text">Разработано</h2>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="copyright__image" src="../source/img/htmlacademy.svg" width="26.9" height="34.1" alt="">
+          <img class="copyright__image" src="../source/img/htmlacademy.svg" width="27" height="34" alt="">
         </a>
       </div>
+    </div>
   </footer>
 </body>
 </html>
