--- a/source/form.html
+++ b/source/form.html
@@ -78,19 +78,19 @@
             <label class="kontakt-form__field">
               <span class="kontakt-form__field-label">Контактный телефон*:</span>
               <input class="kontakt-form__field-control input" type="tel" name="kontakt-form-tel" placeholder="Введите телефон" required pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}">
-              <button class="kontakt-form__fieid-button" type="button">
-                <img src="../source/img/phone.svg" width="18" height="18" alt="">
-              </button>
             </label>
+            <button class="kontakt-form__fieid-button" type="button">
+              <img src="../source/img/phone.svg" width="18" height="18" alt="">
+            </button>
             </li>
             <li class="kontakt-form__item">
             <label class="kontakt-form__field">
               <span class="kontakt-form__field-label">Электронная почта*:</span>
               <input class="kontakt-form__field-control input" type="email" name="kontakt-form-email" placeholder="Введите e-mail" required>
-              <button class="kontakt-form__fieid-button" type="button">
-                <img src="../source/img/mail.svg" width="16" height="12" alt="">
-              </button>
             </label>
+            <button class="kontakt-form__fieid-button" type="button">
+              <img src="../source/img/mail.svg" width="16" height="12" alt="">
+            </button>
             </li>
           </ul>
         </fieldset>
@@ -116,7 +116,6 @@
               </label>
             </li>
           </ul>
-          </legend>
         </fieldset>
         <fieldset class="reviews-form__group">
           <legend class="reviews-form__title">посещенные достопримечательности:</legend>
@@ -146,14 +145,13 @@
               </label>
             </li>
           </ul>
-          </legend>
         </fieldset>
         <fieldset class="reviews-form__group">
           <label class="reviews-form__title" for="emotions">Опишите свои эмоции:</label>
           <textarea class="reviews-form__area" id="emotions" name="emotions" rows="6" required>Опишите подробно все свои восторги</textarea>
         </fieldset>
         <button class="reviews-form__button" type="button">ОТПРАВИТЬ ОТЗЫВ</button>
-        <p button__text>* — обязательные поля</p>
+        <p class="button__text">* — обязательные поля</p>
       </form>
     </section>
   </main>
@@ -182,9 +180,10 @@
       <div class="main-footer__copyright copyright">
         <h2 class="copyright__text">Разработано</h2>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="copyright__image" src="../source/img/htmlacademy.svg" width="26.9" height="34.1" alt="">
+          <img class="copyright__image" src="../source/img/htmlacademy.svg" width="27" height="34" alt="">
         </a>
       </div>
+    </div>
   </footer>
 </body>
 </html>
