--- a/source/index.html
+++ b/source/index.html
@@ -53,15 +53,15 @@
             <h3 class="advantages__title">НАСТОЯЩИЙ ГОРОДОК</h3>
             <p class="advantages__number">— №1 —</p>
             <p class="advantages__description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
-            <img class="advantages__image-city" src="../source/img/photo-city@1x 1.jpg" width="520" height="260" alt="">
+            <img class="advantages__image-city" src="../source/img/photo-city1.jpg" width="520" height="260" alt="Здание бара на фоне гор. Видны три флага">
           </li>
           <li class="advantages__item advantages__item--town">
-            <img class="advantages__image" src="../source/img/icon-house.svg" width="39" height="36.83" alt="Домик">
+            <img class="advantages__image" src="../source/img/icon-house.svg" width="39" height="37" alt="Домик">
             <h3 class="advantages__title">Жилье</h3>
             <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
           </li>
           <li class="advantages__item advantages__item--town">
-            <img class="advantages__image" src="../source/img/icon-burger.svg" width="40" height="34.9" alt="Бургер">
+            <img class="advantages__image" src="../source/img/icon-burger.svg" width="40" height="35" alt="Бургер">
             <h3 class="advantages__title">Еда</h3>
             <p class="advantages__description">Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, Вы НЕ разочаруетесь!</p>
           </li>
@@ -74,7 +74,7 @@
             <h3 class="advantages__title">ТАМ ЕСТЬ Мост дьявола</h3>
             <p class="advantages__number">— №2 —</p>
             <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-            <img class="advantages__image-bridge" src="../source/img/photo-bridge@1x 1.jpg" width="520" height="260" alt="">
+            <img class="advantages__image-bridge" src="../source/img/photo-bridge1.jpg" width="520" height="260" alt="Красные скалы">
           </li>
           <li class="advantages__item">
             <h3 class="advantages__title">НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
@@ -128,9 +128,10 @@
       <div class="main-footer__copyright copyright">
         <h2 class="copyright__text">Разработано</h2>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="copyright__image" src="../source/img/htmlacademy.svg" width="26.9" height="34.1" alt="">
+          <img class="copyright__image" src="../source/img/htmlacademy.svg" width="27" height="34" alt="">
         </a>
       </div>
+    </div>
   </footer>
 </body>
 </html>
