--- a/source/catalog.html
+++ b/source/catalog.html
@@ -15,12 +15,12 @@
       </button>
       <div class="main-navigation__wrapper">
         <ul class="main-navigation__list site-list">
-          <li class="site-list__item site-list__item">
+          <li class="site-list__item">
             <a href="index.html">
               ГЛАВНАЯ
             </a>
           </li>
-          <li class="site-list__item--active">
+          <li class="site-list__item site-list__item--active">
             <a href="catalog.html">
               ФОТО И ВИДЕО
             </a>
@@ -49,7 +49,7 @@
       <p class="catalog__cards-description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
       <ul class="catalog__list">
         <li class="catalog__item-card">
-          <img class="catalog__item-card--image" src="../source/img/photo-1-mobile.jpg" width="280" height="280" alt="Дорога на фоне рассвета. Машина, едущая в начале дороги, с включенными фарами">
+          <img class="catalog__image" src="../source/img/photo-1-mobile.jpg" width="280" height="280" alt="Дорога на фоне рассвета. Машина, едущая в начале дороги, с включенными фарами">
           <h3 class="title-card">Неродные просторы</h3>
           <p class="card-text">Автор фото: Борис</p>
           <button class="card__favorite" type="button">
@@ -57,7 +57,7 @@
           1350</button>
         </li>
         <li class="catalog__item-card">
-          <img class="catalog__item-card--image" src="../source/img/photo-2-mobile.jpg" width="280" height="280" alt="Цветущий кактус желтыми цветами на фоне красных гор">
+          <img class="catalog__image" src="../source/img/photo-2-mobile.jpg" width="280" height="280" alt="Цветущий кактус желтыми цветами на фоне красных гор">
           <h3 class="title-card">Местная растительность</h3>
           <p class="card-text">Автор фото: Сергей</p>
           <button class="card__favorite" type="button">
@@ -65,7 +65,7 @@
           143</button>
         </li>
         <li class="catalog__item-card">
-          <img class="catalog__item-card--image" src="../source/img/photo-3-mobile.jpg" width="280" height="280" alt="Дорога вдоль деретьев">
+          <img class="catalog__image" src="../source/img/photo-3-mobile.jpg" width="280" height="280" alt="Дорога вдоль деретьев">
           <h3 class="title-card">Дорога на север</h3>
           <p class="card-text">Автор фото: Петр</p>
           <button class="card__favorite" type="button">
@@ -73,7 +73,7 @@
           96</button>
         </li>
         <li class="catalog__item-card">
-          <img class="catalog__item-card--image" src="../source/img/photo-4-desktop1.jpg" width="280" height="280" alt="Горы красного увета и деревья между ущельями">
+          <img class="catalog__image" src="../source/img/photo-4-desktop1.jpg" width="280" height="280" alt="Горы красного увета и деревья между ущельями">
           <h3 class="title-card">Мост дьявола</h3>
           <p class="card-text">Автор фото: Антон</p>
           <button class="card__favorite" type="button">
