--- a/source/form.html
+++ b/source/form.html
@@ -42,7 +42,7 @@
   <main class="form-container">
     <header class="form__header">
       <h1 class="visually-hiden">Седона</h1>
-      <img src="../source/img/SEDONA.svg" alt="" style="background-image: url('images/back-desktop.jpg');">
+      <img src="../source/img/SEDONA.svg" alt="" style="background-image: url('images/back-desktop.jpg')">
     </header>
     <section class="custom-reviews">
       <h2 class="custom-reviews__title">Оставьте свой отзыв</h2>
@@ -73,22 +73,22 @@
         </fieldset>
         <fieldset class="reviews-form__group">
           <legend class="reviews-form__title">Контактная информация:</legend>
-          <ul class="contakt-form__list">
-            <li class="contakt-form__item">
-            <label class="contakt-form__label">
+          <ul class="contact-form__list">
+            <li class="contact-form__item">
+            <label class="contact-form__label">
               <span class="label__span">Контактный телефон*:</span>
-              <input class="label__input" type="tel" name="contakt-form-tel" placeholder="Введите телефон" required pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}">
+              <input class="label__input" type="tel" name="contact-form-tel" placeholder="Введите телефон" required pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}">
             </label>
-            <button class="contakt-form__button" type="button">
+            <button class="contact-form__button" type="button">
               <img class="button__image" src="../source/img/phone.svg" width="18" height="18" alt="">
             </button>
             </li>
-            <li class="contakt-form__item">
-            <label class="contakt-form__label">
+            <li class="contact-form__item">
+            <label class="contact-form__label">
               <span class="label__span">Электронная почта*:</span>
               <input class="label__input" type="email" name="contakt-form-email" placeholder="Введите e-mail" required>
             </label>
-            <button class="contakt-form__button" type="button">
+            <button class="contact-form__button" type="button">
               <img class="button__image" src="../source/img/mail.svg" width="16" height="12" alt="">
             </button>
             </li>
@@ -99,20 +99,20 @@
           <ul class="reviews-form__radio">
             <li class="reviews-form__item">
               <label class="reviews-form__label">
-                <input class="visually-hidden control__input" type="radio" checked>
-                <span class="control-label">Скорее положительное</span>
+                <input class="visually-hidden label__input" type="radio" checked>
+                <span class="label__span">Скорее положительное</span>
               </label>
             </li>
             <li class="reviews-form__item">
               <label class="reviews-form__label">
-                <input class="visually-hidden control__input" type="radio">
-                <span class="control-label">Скорее отрицательное</span>
+                <input class="visually-hidden label__input" type="radio">
+                <span class="label__span">Скорее отрицательное</span>
               </label>
             </li>
             <li class="reviews-form__item">
               <label class="reviews-form__label">
-                <input class="visually-hidden control__input" type="radio">
-                <span class="control-label">Затрудняюсь ответить</span>
+                <input class="visually-hidden label__input" type="radio">
+                <span class="label__span">Затрудняюсь ответить</span>
               </label>
             </li>
           </ul>
@@ -122,26 +122,26 @@
           <ul class="reviews-form__checked">
             <li class="reviews-form__item">
               <label class="reviews-form__label">
-                <input class="visually-hidden control__input" type="checkbox" checked>
-                <span class="control-label">Мост Дьявола</span>
+                <input class="visually-hidden label__input" type="checkbox" checked>
+                <span class="label__span">Мост Дьявола</span>
               </label>
             </li>
             <li class="reviews-form__item">
               <label class="reviews-form__label">
-                <input class="visually-hidden control__input" type="checkbox" checked>
-                <span class="control-label">Гора-Колокол</span>
+                <input class="visually-hidden label__input" type="checkbox" checked>
+                <span class="label__span">Гора-Колокол</span>
               </label>
             </li>
             <li class="reviews-form__item">
               <label class="reviews-form__label">
-                <input class="visually-hidden control__input" type="checkbox" checked>
-                <span class="control-label">Слайд-парк</span>
+                <input class="visually-hidden label__input" type="checkbox" checked>
+                <span class="label__span">Слайд-парк</span>
               </label>
             </li>
             <li class="reviews-form__item">
               <label class="reviews-form__label">
-                <input class="visually-hidden control__input" type="checkbox">
-                <span class="control-label">Красные скалы</span>
+                <input class="visually-hidden label__input" type="checkbox">
+                <span class="label__span">Красные скалы</span>
               </label>
             </li>
           </ul>
