--- a/source/form.html
+++ b/source/form.html
@@ -73,22 +73,22 @@
         </fieldset>
         <fieldset class="reviews-form__group">
           <legend class="reviews-form__title">Контактная информация:</legend>
-          <ul class="contakt-form__list">
-            <li class="contakt-form__item">
-            <label class="contakt-form__label">
+          <ul class="contact-form__list">
+            <li class="contact-form__item">
+            <label class="contact-form__label">
               <span class="label__span">Контактный телефон*:</span>
-              <input class="label__input" type="tel" name="contakt-form-tel" placeholder="Введите телефон" required pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}">
+              <input class="label__input" type="tel" name="contact-form-tel" placeholder="Введите телефон" required pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}">
             </label>
-            <button class="contakt-form__button" type="button">
+            <button class="contact-form__button" type="button">
               <img class="button__image" src="../source/img/phone.svg" width="18" height="18" alt="">
             </button>
             </li>
-            <li class="contakt-form__item">
-            <label class="contakt-form__label">
+            <li class="contact-form__item">
+            <label class="contact-form__label">
               <span class="label__span">Электронная почта*:</span>
               <input class="label__input" type="email" name="contakt-form-email" placeholder="Введите e-mail" required>
             </label>
-            <button class="contakt-form__button" type="button">
+            <button class="contact-form__button" type="button">
               <img class="button__image" src="../source/img/mail.svg" width="16" height="12" alt="">
             </button>
             </li>
