--- a/source/form.html
+++ b/source/form.html
@@ -76,8 +76,8 @@
           <ul class="contact-form__list">
             <li class="contact-form__item">
             <label class="contact-form__label">
-              <span class="label__span">Контактный телефон*:</span>
-              <input class="label__input" type="tel" name="contact-form-tel" placeholder="Введите телефон" required pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}">
+              <span class="visually-hidden control__input">Контактный телефон*:</span>
+              <input class="control__label" type="tel" name="contact-form-tel" placeholder="Введите телефон" required pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}">
             </label>
             <button class="contact-form__button" type="button">
               <img class="button__image" src="../source/img/phone.svg" width="18" height="18" alt="">
@@ -85,8 +85,8 @@
             </li>
             <li class="contact-form__item">
             <label class="contact-form__label">
-              <span class="label__span">Электронная почта*:</span>
-              <input class="label__input" type="email" name="contact-form-email" placeholder="Введите e-mail" required>
+              <span class="visually-hidden control__input">Электронная почта*:</span>
+              <input class="control__label" type="email" name="contact-form-email" placeholder="Введите e-mail" required>
             </label>
             <button class="contact-form__button" type="button">
               <img class="button__image" src="../source/img/mail.svg" width="16" height="12" alt="">
@@ -99,20 +99,20 @@
           <ul class="reviews-form__radio">
             <li class="reviews-form__item">
               <label class="reviews-form__label">
-                <input class="label__input" type="radio" checked>
-                <span class="label__span">Скорее положительное</span>
+                <input class="visually-hidden control__input" type="radio" checked>
+                <span class="control__label">Скорее положительное</span>
               </label>
             </li>
             <li class="reviews-form__item">
               <label class="reviews-form__label">
-                <input class="label__input" type="radio">
-                <span class="label__span">Скорее отрицательное</span>
+                <input class="visually-hidden control__input" type="radio">
+                <span class="control__label">Скорее отрицательное</span>
               </label>
             </li>
             <li class="reviews-form__item">
               <label class="reviews-form__label">
-                <input class="label__input" type="radio">
-                <span class="label__span">Затрудняюсь ответить</span>
+                <input class="visually-hidden control__input" type="radio">
+                <span class="control__label">Затрудняюсь ответить</span>
               </label>
             </li>
           </ul>
@@ -122,26 +122,26 @@
           <ul class="reviews-form__checked">
             <li class="reviews-form__item">
               <label class="reviews-form__label">
-                <input class="label__input" type="checkbox" checked>
-                <span class="label__span">Мост Дьявола</span>
+                <input class="visually-hidden control__input" type="checkbox" checked>
+                <span class="control__label">Мост Дьявола</span>
               </label>
             </li>
             <li class="reviews-form__item">
               <label class="reviews-form__label">
-                <input class="label__input" type="checkbox" checked>
-                <span class="label__span">Гора-Колокол</span>
+                <input class="visually-hidden control__input" type="checkbox" checked>
+                <span class="control__label">Гора-Колокол</span>
               </label>
             </li>
             <li class="reviews-form__item">
               <label class="reviews-form__label">
-                <input class="label__input" type="checkbox" checked>
+                <input class="visually-hidden control__input" type="checkbox" checked>
                 <span class="control-label">Слайд-парк</span>
               </label>
             </li>
             <li class="reviews-form__item">
               <label class="reviews-form__label">
-                <input class="label__input" type="checkbox">
-                <span class="label__span">Красные скалы</span>
+                <input class="visually-hidden control__input" type="checkbox">
+                <span class="control__label">Красные скалы</span>
               </label>
             </li>
           </ul>
@@ -162,17 +162,17 @@
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-              <img class="vkontakte-image" src="../source/img/vk.svg" width="48" height="48" alt="">
+              <img class="social__link--vkontakte-image" src="../source/img/vk.svg" width="48" height="48" alt="">
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
-              <img class="youtube-image" src="../source/img/YouTube.svg" width="48" height="48" alt="">
+              <img class="social__link--youtube-image" src="../source/img/YouTube.svg" width="48" height="48" alt="">
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
-              <img class="telegram-image" src="../source/img/Telegram.svg" width="48" height="48" alt="">
+              <img class="social__link--telegram-image" src="../source/img/Telegram.svg" width="48" height="48" alt="">
             </a>
           </li>
         </ul>
