--- a/source/catalog.html
+++ b/source/catalog.html
@@ -49,7 +49,7 @@
       <p class="catalog__cards-description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
       <ul class="catalog__list">
         <li class="catalog__item-card">
-          <img class="card-image" src="../source/img/photo-1-mobile.jpg" width="280" height="280" alt="Дорога на фоне рассвета. Машина, едущая в начале дороги, с включенными фарами">
+          <img class="catalog__image" src="../source/img/photo-1-mobile.jpg" width="280" height="280" alt="Дорога на фоне рассвета. Машина, едущая в начале дороги, с включенными фарами">
           <h3 class="card-title">Неродные просторы</h3>
           <p class="card-text">Автор фото: Борис</p>
           <button class="card__favorite" type="button">
@@ -57,7 +57,7 @@
           1350</button>
         </li>
         <li class="catalog__item-card">
-          <img class="card-image" src="../source/img/photo-2-mobile.jpg" width="280" height="280" alt="Цветущий кактус желтыми цветами на фоне красных гор">
+          <img class="catalog__image" src="../source/img/photo-2-mobile.jpg" width="280" height="280" alt="Цветущий кактус желтыми цветами на фоне красных гор">
           <h3 class="card-title">Местная растительность</h3>
           <p class="card-text">Автор фото: Сергей</p>
           <button class="card__favorite" type="button">
@@ -65,7 +65,7 @@
           143</button>
         </li>
         <li class="catalog__item-card">
-          <img class="card-image" src="../source/img/photo-3-mobile.jpg" width="280" height="280" alt="Дорога вдоль деретьев">
+          <img class="catalog__image" src="../source/img/photo-3-mobile.jpg" width="280" height="280" alt="Дорога вдоль деретьев">
           <h3 class="card-title">Дорога на север</h3>
           <p class="card-text">Автор фото: Петр</p>
           <button class="card__favorite" type="button">
@@ -73,7 +73,7 @@
           96</button>
         </li>
         <li class="catalog__item-card">
-          <img class="card-image" src="../source/img/photo-4-desktop1.jpg" width="280" height="280" alt="Горы красного увета и деревья между ущельями">
+          <img class="catalog__image" src="../source/img/photo-4-desktop1.jpg" width="280" height="280" alt="Горы красного увета и деревья между ущельями">
           <h3 class="card-title">Мост дьявола</h3>
           <p class="card-text">Автор фото: Антон</p>
           <button class="card__favorite" type="button">
@@ -99,17 +99,17 @@
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-              <img class="vkontakte-image" src="../source/img/vk.svg" width="48" height="48" alt="">
+              <img class="social__link--vkontakte-image" src="../source/img/vk.svg" width="48" height="48" alt="">
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
-              <img class="youtube-image" src="../source/img/YouTube.svg" width="48" height="48" alt="">
+              <img class="social__link--youtube-image" src="../source/img/YouTube.svg" width="48" height="48" alt="">
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
-              <img class="telegram-image" src="../source/img/Telegram.svg" width="48" height="48" alt="">
+              <img class="social__link--telegram-image" src="../source/img/Telegram.svg" width="48" height="48" alt="">
             </a>
           </li>
         </ul>
